@@ -1,5 +1,10 @@
 2008-01-16  Markus Deuling  <deuling@de.ibm.com>
 
+	* ppc-linux-nat.c (ppc_register_u_addr): Add gdbarch as parameter.
+	Replace current_gdbarch by gdbarch. Update caller.
+
+2008-01-16  Markus Deuling  <deuling@de.ibm.com>
+
 	* dbxread.c (repeated_header_complaint, dbx_symfile_init)
 	(read_dbx_dynamic_symtab, function_outside_compilation_unit_complaint)
 	(read_dbx_symtab, end_psymtab, dbx_psymtab_to_symtab_1)
